--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Circlon | Collect,collaborate,create</title>
+    <title>Circlon  Technologies</title>
     <meta name="description" content="TechSphere delivers high-quality software development services, industry-focused training programs in Full Stack development, and hands-on internship opportunities. Transform your tech career with us." />
     <meta name="keywords" content="software development, web development, mobile apps, full stack training, MERN stack, MEAN stack, Python training, Java training, tech internships, coding bootcamp" />
     <meta name="author" content="TechSphere" />
